members = [".", "usb-pd-rs"]

[package]
name = "pdg4"
version = "0.1.0"
edition = "2021"

[dependencies]
embassy-stm32 = { version = "0.1", features = [
  "defmt",
  "stm32g474ce",
  "unstable-pac",
  "time-driver-any",
  "exti",
  "memory-x",
] }
embassy-sync = { version = "0.6", features = ["defmt"] }
embassy-executor = { version = "0.6", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "integrated-timers",
] }
embassy-time = { version = "0.3", features = [
  "defmt",
  "defmt-timestamp-uptime",
  "tick-hz-32_768",
] }

embedded-io = { version = "0.6.1" }
embedded-hal = "1.0.0"

cortex-m = { version = "0.7.7", features = [
  "inline-asm",
  "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"

panic-probe = { version = "0.3", features = [
  "print-defmt",
  #    "print-rtt"
] }
defmt = "0.3"
rtt-target = { git = "https://github.com/probe-rs/rtt-target", features = [
  "defmt",
] }

[profile.release]
lto = "fat"
opt-level = "s"
incremental = false
codegen-units = 1
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true

[patch.crates-io]
# make sure to get the latest git rev from GitHub, you can see the latest one here:
# https://github.com/embassy-rs/embassy/commits/main/
# embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-time-driver = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-time-queue-driver = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy", rev = "8dde7b625eed78271fec8f69ffa370e55c9dda9e" }
